added one more option as stated by Khalid shb

--- a/app/src/main/res/layout/activity_f1_section0502.xml
+++ b/app/src/main/res/layout/activity_f1_section0502.xml
@@ -325,6 +325,8 @@
                                 android:id="@+id/RS865"
                                 style="@style/checkbox"
                                 android:layout_weight="1"
+                                android:checked="@{RS869.checked ? false : false}"
+                                android:enabled="@{RS869.checked ? false : true}"
                                 android:text="@string/RS86e" />
 
                             <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
@@ -346,6 +348,8 @@
                                 android:id="@+id/RS866"
                                 style="@style/checkbox"
                                 android:layout_weight="1"
+                                android:checked="@{RS869.checked ? false : false}"
+                                android:enabled="@{RS869.checked ? false : true}"
                                 android:text="@string/RS86f" />
 
                             <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
@@ -367,6 +371,8 @@
                                 android:id="@+id/RS867"
                                 style="@style/checkbox"
                                 android:layout_weight="1"
+                                android:checked="@{RS869.checked ? false : false}"
+                                android:enabled="@{RS869.checked ? false : true}"
                                 android:text="@string/RS86g" />
 
                             <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
@@ -388,6 +394,8 @@
                                 android:id="@+id/RS868"
                                 style="@style/checkbox"
                                 android:layout_weight="1"
+                                android:checked="@{RS869.checked ? false : false}"
+                                android:enabled="@{RS869.checked ? false : true}"
                                 android:text="@string/RS86h" />
 
                             <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
@@ -404,6 +412,12 @@
                                 android:visibility='@{RS868.checked ? View.VISIBLE : View.GONE}'
                                 app:dateFormat="dd-MM-yyyy"
                                 app:maxDate="CR_DATE" />
+
+                            <CheckBox
+                                android:id="@+id/RS869"
+                                style="@style/checkbox"
+                                android:layout_weight="1"
+                                android:text="@string/RS86i" />
 
                         </LinearLayout>
 
