--- a/app/src/main/res/layout/activity_f1_section0502.xml
+++ b/app/src/main/res/layout/activity_f1_section0502.xml
@@ -39,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
                 <!--RS85 - Radio-->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/RS85cv"
@@ -78,6 +79,17 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
+
+
+
+                <!-- NOT Required in Third FollowUp -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
 
                 <!--RS86h1 - EditText-->
                 <LinearLayout style="@style/linearlayout_view_wt_bound">
@@ -415,6 +427,8 @@
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
 
             </LinearLayout>
 
