PostTest MainApp.testNotConduct Requested@AmirHamza

--- a/app/src/main/res/layout/activity_form2b_test.xml
+++ b/app/src/main/res/layout/activity_form2b_test.xml
@@ -208,7 +208,9 @@
                                 style="@style/EditTextNum"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
-                                android:hint="@string/Especify"
+                                android:gravity="center"
+                                android:maxLength="5"
+                                android:hint="###"
                                 android:inputType="numberDecimal"
                                 app:maxValue="100"
                                 app:minValue="0"
@@ -239,7 +241,9 @@
                                 style="@style/EditTextNum"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
-                                android:hint="@string/Especify"
+                                android:gravity="center"
+                                android:maxLength="5"
+                                android:hint="###"
                                 android:inputType="numberDecimal"
                                 app:maxValue="100"
                                 app:minValue="0"
@@ -270,7 +274,9 @@
                                 style="@style/EditTextNum"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
-                                android:hint="@string/Especify"
+                                android:gravity="center"
+                                android:maxLength="5"
+                                android:hint="###"
                                 android:inputType="numberDecimal"
                                 app:maxValue="100"
                                 app:minValue="0"
