--- a/app/src/main/res/layout/activity_f1_section0502.xml
+++ b/app/src/main/res/layout/activity_f1_section0502.xml
@@ -526,7 +526,9 @@
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
+
             </LinearLayout>
+            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
 
         </LinearLayout>
 
